--- a/.jshintrc
+++ b/.jshintrc
@@ -1,11 +1,18 @@
 {
-  "expr": true,
-  "browser": true,
-  "multistr": true,
-  "globals": {
-    "jQuery": true,
-    "console": true,
-    "module": true,
-    "document": true
-  }
+    "bitwise": true,
+    "eqeqeq": true,
+    "eqnull": true,
+    "immed": true,
+    "newcap": true,
+    "esnext": true,
+    "latedef": true,
+    "noarg": true,
+    "node": true,
+    "undef": true,
+    "browser": true,
+    "trailing": true,
+    "jquery": true,
+    "curly": true,
+    "trailing": true,
+    "smarttabs": true
 }
