--- a/bower.json
+++ b/bower.json
@@ -1,21 +1,21 @@
 {
-	"name": "FastGap",
-	"version": "0.0.4",
-	"homepage": "https://github.com/GustavoCostaW/FastGap",
-	"authors": [
+    "name": "FastGap",
+    "version": "0.0.4",
+    "homepage": "https://github.com/GustavoCostaW/FastGap",
+    "authors": [
     "Gustavo Costa <gustavo.costa.w@gmail.com>",
     "Mayron Cachina <mayroncachina@gmail.com>",
     "Daniel Torres <daniel@updigital.me>",
     "Ivan Santos <pragmaticivan@gmail.com>"
   ],
-	"description": "Faster PhoneGap Template",
-	"keywords": [
+    "description": "Faster PhoneGap Template",
+    "keywords": [
     "phonegap",
     "template",
     "mobile"
   ],
-	"license": "MIT",
-	"ignore": [
+    "license": "MIT",
+    "ignore": [
     "**/.*",
     "node_modules",
     "bower_components",
@@ -23,10 +23,11 @@
     "test",
     "tests"
   ],
-	"dependencies": {
-		"fastclick": "~0.6.11",
-		"overthrow": "~0.7.0",
-		"zepto": "~1.1.3",
-		"topcoat": "~0.8.0"
-	}
+    "dependencies": {
+        "fastclick": "~0.6.11",
+        "overthrow": "~0.7.0",
+        "zepto": "~1.1.3",
+        "topcoat": "~0.8.0",
+        "snapjs": "*"
+    }
 }
