--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,7 @@
     "authors": [
     "Gustavo Costa <gustavo.costa.w@gmail.com>",
     "Mayron Cachina <mayroncachina@gmail.com>",
-    "Daniel Torres <daniel@updigital.me>",
+    "Daniel Torres <danielfeelfine@gmail.com>",
     "Ivan Santos <pragmaticivan@gmail.com>"
   ],
     "description": "Faster PhoneGap Template",
