--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
     "name": "FastGap",
     "version": "0.0.4",
-    "homepage": "https://github.com/GustavoCostaW/FastGap",
+    "homepage": "http://fastgap.mobi/",
     "authors": [
     "Gustavo Costa <gustavo.costa.w@gmail.com>",
     "Mayron Cachina <mayroncachina@gmail.com>",
