--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
 		"matchdep": "~0.1.2",
 		"grunt-notify": "~0.2.7",
 		"grunt-contrib-connect": "^0.6.0",
-		"grunt-bower-install": "~1.0.2"
+		"grunt-bower-install": "~1.0.2",
+		"grunt-bump": "0.0.13"
 	},
 	"engines": {
 		"node": ">=0.8.0",
