--- a/package.json
+++ b/package.json
@@ -1,70 +1,70 @@
 {
-	"name": "fastgap",
-	"version": "0.0.25",
-	"description": "FastGap is a template created by Brazilians to start developing native apps for smartphones using PhoneGap.",
-	"private": true,
-	"repository": {
-		"type": "git",
-		"url": "git://github.com/FastGap/fastgap.git"
-	},
-	"keywords": [
+  "name": "fastgap",
+  "version": "0.0.25",
+  "description": "FastGap is a template created by Brazilians to start developing native apps for smartphones using PhoneGap.",
+  "private": true,
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/FastGap/fastgap.git"
+  },
+  "keywords": [
     "fastgap",
     "zepto",
     "cordova",
     "phonegap"
   ],
-	"author": {
-		"name": "Gustavo Costa",
-		"email": "gustavo.costa.w@gmail.com",
-		"url": "https://github.com/GustavoCostaW"
-	},
-	"licenses": [
-		{
-			"type": "MIT"
+  "author": {
+    "name": "Gustavo Costa",
+    "email": "gustavo.costa.w@gmail.com",
+    "url": "https://github.com/GustavoCostaW"
+  },
+  "licenses": [
+    {
+      "type": "MIT"
     }
   ],
-	"maintainers": [
-		{
-			"name": "Gustavo Costa",
-			"email": "gustavo.costa.w@gmail.com",
-			"url": "https://github.com/GustavoCostaW"
+  "maintainers": [
+    {
+      "name": "Gustavo Costa",
+      "email": "gustavo.costa.w@gmail.com",
+      "url": "https://github.com/GustavoCostaW"
     },
-		{
-			"name": "Ivan Santos",
-			"email": "pragmaticivan@gmail.com",
-			"url": "https://github.com/pragmaticivan"
+    {
+      "name": "Ivan Santos",
+      "email": "pragmaticivan@gmail.com",
+      "url": "https://github.com/pragmaticivan"
     },
-		{
-			"name": "Mayron Cachina",
-			"email": "mayroncachina@gmail.com",
-			"url": "https://github.com/mayroncachina"
-		},
-		{
-			"name": "Daniel Torres",
-			"email": "danielfeelfine@gmail.com",
-			"url": "https://github.com/danielfeelfine"
-		}
+    {
+      "name": "Mayron Cachina",
+      "email": "mayroncachina@gmail.com",
+      "url": "https://github.com/mayroncachina"
+    },
+    {
+      "name": "Daniel Torres",
+      "email": "danielfeelfine@gmail.com",
+      "url": "https://github.com/danielfeelfine"
+    }
   ],
-	"bugs": {
-		"url": "https://github.com/FastGap/fastgap/issues"
-	},
-	"devDependencies": {
-		"grunt": "~0.4.1",
-		"grunt-contrib-uglify": "~0.2.1",
-		"grunt-contrib-watch": "~0.4.3",
-		"grunt-contrib-compass": "~0.5.0",
-		"grunt-contrib-jshint": "~0.5.4",
-		"grunt-contrib-imagemin": "~0.1.4",
-		"grunt-contrib-concat": "~0.3.0",
-		"grunt-contrib-copy": "~0.5.0",
-		"matchdep": "~0.1.2",
-		"grunt-notify": "~0.2.7",
-		"grunt-contrib-connect": "^0.6.0",
-		"grunt-bower-install": "~1.0.2",
-		"grunt-bump": "0.0.13"
-	},
-	"engines": {
-		"node": ">=0.8.0",
-		"npm": ">=1.1.0"
-	}
+  "bugs": {
+    "url": "https://github.com/FastGap/fastgap/issues"
+  },
+  "devDependencies": {
+    "grunt": "~0.4.1",
+    "grunt-contrib-uglify": "~0.2.1",
+    "grunt-contrib-watch": "~0.4.3",
+    "grunt-contrib-compass": "~0.5.0",
+    "grunt-contrib-jshint": "~0.5.4",
+    "grunt-contrib-imagemin": "~0.1.4",
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-copy": "~0.5.0",
+    "grunt-notify": "~0.2.7",
+    "grunt-contrib-connect": "^0.6.0",
+    "grunt-bower-install": "~1.0.2",
+    "grunt-bump": "0.0.13",
+    "load-grunt-tasks": "^0.4.0"
+  },
+  "engines": {
+    "node": ">=0.8.0",
+    "npm": ">=1.1.0"
+  }
 }
