--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "type": "git",
     "url": "git://github.com/FastGap/fastgap.git"
   },
+  "homepage": "http://fastgap.mobi/",
   "keywords": [
     "fastgap",
     "zepto",
