--- a/package.json
+++ b/package.json
@@ -62,7 +62,8 @@
     "grunt-contrib-connect": "^0.6.0",
     "grunt-bower-install": "~1.0.2",
     "grunt-bump": "0.0.13",
-    "load-grunt-tasks": "^0.4.0"
+    "load-grunt-tasks": "^0.4.0",
+    "grunt-banner": "^0.2.2"
   },
   "engines": {
     "node": ">=0.8.0",
