--- a/package.json
+++ b/package.json
@@ -53,7 +53,6 @@
     "grunt": "~0.4.1",
     "grunt-contrib-uglify": "~0.2.1",
     "grunt-contrib-watch": "~0.4.3",
-    "grunt-contrib-compass": "~0.5.0",
     "grunt-contrib-jshint": "~0.5.4",
     "grunt-contrib-imagemin": "~0.1.4",
     "grunt-contrib-concat": "~0.4.0",
@@ -63,7 +62,8 @@
     "grunt-bower-install": "~1.0.2",
     "grunt-bump": "0.0.13",
     "load-grunt-tasks": "^0.4.0",
-    "grunt-banner": "^0.2.2"
+    "grunt-banner": "^0.2.2",
+    "grunt-sass": "^0.12.1"
   },
   "engines": {
     "node": ">=0.8.0",
