--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
     "grunt-bump": "0.0.13",
     "load-grunt-tasks": "^0.4.0",
     "grunt-banner": "^0.2.2",
-    "grunt-sass": "^0.12.1"
+    "grunt-sass": "^0.12.1",
+    "grunt-contrib-clean": "^0.5.0"
   },
   "engines": {
     "node": ">=0.8.0",
