--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "grunt-contrib-uglify": "~0.2.1",
     "grunt-contrib-watch": "~0.4.3",
     "grunt-contrib-jshint": "~0.5.4",
-    "grunt-contrib-imagemin": "~0.1.4",
+    "grunt-contrib-imagemin": "^0.6.1",
     "grunt-contrib-concat": "~0.4.0",
     "grunt-contrib-copy": "~0.5.0",
     "grunt-notify": "~0.2.7",
