--- a/bower.json
+++ b/bower.json
@@ -27,9 +27,13 @@
   ],
   "ignore": [
     "**/.*",
+    "Gruntfile.js"
+    "*.json",
+    "CONTRIBUTING.md",
     "node_modules",
     "bower_components",
-    "app/bower_components",
+    "dist/img",
+    "src",
     "test",
     "tests"
   ],
